# AgenticAi

./: .env.example  .gitignore  API_AUTHENTICATION.md  API_REFERENCE_CARD.md  CLASS_NAME_FIX.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_GITHUB_CHECKLIST.md  DEPLOY_NOW.md  Dockerfile  FULLSTACK_USAGE.md  GITHUB_DEPLOYMENT.md  GITHUB_SETUP_COMPLETE.md  QUICK_START.md  QUICK_START_API.md  QUICK_START_STANDALONE.md  RAILWAY_DEPLOY_GUIDE.md  README.md  STANDALONE_GUIDE.md  START_API_HERE.bat  START_HERE.bat  UPDATED_FEATURES.md  UPDATE_SUMMARY.md  VSCODE_COMMANDS.md  allow_firewall.bat  deploy_to_github.bat  heroku-start.sh  pyproject.toml  railway.json  railway.toml  requirements.txt  run.py  show_deployment_files.bat  standalone_api.py  start.py  start_api.bat  startup.txt  test_api.py  test_be_ui_syntax.py  test_class_names.py  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: azure-deploy.yml  deploy.yml  docker-publish.yml  railway-deploy.yml
docs/: DESCRIPTION_UPDATE_FEATURE.md  DEVELOPER_ASSIGNMENT_FEATURE.md  JIRA_UPDATE_FEATURE.md  MCP_INTEGRATION_GUIDE.md  PSEUDO_CODE_FIELD_FEATURE.md  api_reference.md  architecture.md
src/: __init__.py  agent.py  code_generator.py  config.py  effort_estimator.py  formatter.py  mcp_client.py  models.py
